@@ -3,8 +3,6 @@
 
 - im_prepare_thread() can go? I think it was only used by im_render()
 
-  wtf, im_vips2tiff.c seems to be using it, what's wrong with im_wbuffer()?
-
 - get rid of threadgroup too (deprecate?)
 
 
