@@ -12,6 +12,7 @@
 - set G_LOG_DOMAIN to VIPS so we can use g_warning etc.
 - added VIPS_DEBUG_MSG() macro
 - --vips-wbuffer2 turns on threadpool for im_iterate as well
+- im_vips2tiff() uses vips_sink() instead of threadgroup
 
 16/1/10 started 7.21.2
 - "invalidate" is careful to keep images alive, so invalidate callbacks can do
